работа над ошибками

--- a/portfolio.html
+++ b/portfolio.html
@@ -55,161 +55,123 @@
     </header>
     <main>
       <section class="section filter-section">
-        <h1 class="visually-hidden">Фильтр</h1>
         <div class="container filter-container">
-          <div class="flex-filter">
-            <ul class="filter">
-              <li><button class="button" type="button">Все</button></li>
-              <li><button class="button" type="button">Веб-сайты</button></li>
-              <li><button class="button" type="button">Приложения</button></li>
-              <li><button class="button" type="button">Дизайн</button></li>
-              <li><button class="button" type="button">Маркетинг</button></li>
-            </ul>
-          </div>
+          <h1 class="visually-hidden">Фильтр</h1>
+          <ul class="filter">
+            <li><button class="button" type="button">Все</button></li>
+            <li><button class="button" type="button">Веб-сайты</button></li>
+            <li><button class="button" type="button">Приложения</button></li>
+            <li><button class="button" type="button">Дизайн</button></li>
+            <li><button class="button" type="button">Маркетинг</button></li>
+          </ul>
           <ul class="app-list">
             <li class="item-app">
-              <article class="app">
-                <div class="app-thumb">
-                  <img
-                    src="images/img5.jpg"
-                    alt="Пример техноякоря"
-                    width="370"
-                    height="294"
-                  />
-                </div>
-                <div class="app-content">
-                  <h2 class="product">Технокряк</h2>
-                  <p class="type">Веб-сайт</p>
-                </div>
-              </article>
+              <img
+                src="images/img5.jpg"
+                alt="Пример техноякоря"
+                width="370"
+                height="294"
+              />
+              <div class="app-content">
+                <h2 class="product">Технокряк</h2>
+                <p class="type">Веб-сайт</p>
+              </div>
             </li>
             <li class="item-app">
-              <article class="app">
-                <div class="app-thumb">
-                  <img
-                    src="images/img6.jpg"
-                    alt="Постер New Orlean vs Golden Star"
-                    width="370"
-                    height="294"
-                  />
-                </div>
-                <div class="app-content">
-                  <h2 class="product">Постер New Orlean vs Golden Star</h2>
-                  <p class="type">Дизайн</p>
-                </div>
-              </article>
+              <img
+                src="images/img6.jpg"
+                alt="Постер New Orlean vs Golden Star"
+                width="370"
+                height="294"
+              />
+              <div class="app-content">
+                <h2 class="product">Постер New Orlean vs Golden Star</h2>
+                <p class="type">Дизайн</p>
+              </div>
             </li>
             <li class="item-app">
-              <article class="app">
-                <div class="app-thumb">
-                  <img
-                    src="images/img7.jpg"
-                    alt="Ресторан Seafood"
-                    width="370"
-                    height="294"
-                  />
-                </div>
-                <div class="app-content">
-                  <h2 class="product">Ресторан Seafood</h2>
-                  <p class="type">Приложение</p>
-                </div>
-              </article>
+              <img
+                src="images/img7.jpg"
+                alt="Ресторан Seafood"
+                width="370"
+                height="294"
+              />
+              <div class="app-content">
+                <h2 class="product">Ресторан Seafood</h2>
+                <p class="type">Приложение</p>
+              </div>
             </li>
             <li class="item-app">
-              <article class="app">
-                <div class="app-thumb">
-                  <img
-                    src="images/img8.jpg"
-                    alt="Проект Prime"
-                    width="370"
-                    height="294"
-                  />
-                </div>
-                <div class="app-content">
-                  <h2 class="product">Проект Prime</h2>
-                  <p class="type">Маркетинг</p>
-                </div>
-              </article>
+              <img
+                src="images/img8.jpg"
+                alt="Проект Prime"
+                width="370"
+                height="294"
+              />
+              <div class="app-content">
+                <h2 class="product">Проект Prime</h2>
+                <p class="type">Маркетинг</p>
+              </div>
             </li>
             <li class="item-app">
-              <article class="app">
-                <div class="app-thumb">
-                  <img
-                    src="images/img9.jpg"
-                    alt="Проект Boxes"
-                    width="370"
-                    height="294"
-                  />
-                </div>
-                <div class="app-content">
-                  <h2 class="product">Проект Boxes</h2>
-                  <p class="type">Приложение</p>
-                </div>
-              </article>
+              <img
+                src="images/img9.jpg"
+                alt="Проект Boxes"
+                width="370"
+                height="294"
+              />
+              <div class="app-content">
+                <h2 class="product">Проект Boxes</h2>
+                <p class="type">Приложение</p>
+              </div>
             </li>
             <li class="item-app">
-              <article class="app">
-                <div class="app-thumb">
-                  <img
-                    src="images/img10.jpg"
-                    alt="Inspiration has no Borders"
-                    width="370"
-                    height="294"
-                  />
-                </div>
-                <div class="app-content">
-                  <h2 class="product">Inspiration has no Borders</h2>
-                  <p class="type">Веб-сайт</p>
-                </div>
-              </article>
+              <img
+                src="images/img10.jpg"
+                alt="Inspiration has no Borders"
+                width="370"
+                height="294"
+              />
+              <div class="app-content">
+                <h2 class="product">Inspiration has no Borders</h2>
+                <p class="type">Веб-сайт</p>
+              </div>
             </li>
             <li class="item-app">
-              <article class="app">
-                <div class="app-thumb">
-                  <img
-                    src="images/img11.jpg"
-                    alt="Издание Limited Edition"
-                    width="370"
-                    height="294"
-                  />
-                </div>
-                <div class="app-content">
-                  <h2 class="product">Издание Limited Edition</h2>
-                  <p class="type">Дизайн</p>
-                </div>
-              </article>
+              <img
+                src="images/img11.jpg"
+                alt="Издание Limited Edition"
+                width="370"
+                height="294"
+              />
+              <div class="app-content">
+                <h2 class="product">Издание Limited Edition</h2>
+                <p class="type">Дизайн</p>
+              </div>
             </li>
             <li class="item-app">
-              <article class="app">
-                <div class="app-thumb">
-                  <img
-                    src="images/img12.jpg"
-                    alt="Проект LAB"
-                    width="370"
-                    height="294"
-                  />
-                </div>
-                <div class="app-content">
-                  <h2 class="product">Проект LAB</h2>
-                  <p class="type">Маркетинг</p>
-                </div>
-              </article>
+              <img
+                src="images/img12.jpg"
+                alt="Проект LAB"
+                width="370"
+                height="294"
+              />
+              <div class="app-content">
+                <h2 class="product">Проект LAB</h2>
+                <p class="type">Маркетинг</p>
+              </div>
             </li>
             <li class="item-app">
-              <article class="app">
-                <div class="app-thumb">
-                  <img
-                    src="images/img13.jpg"
-                    alt="Growing Business"
-                    width="370"
-                    height="294"
-                  />
-                </div>
-                <div class="app-content">
-                  <h2 class="product">Growing Business</h2>
-                  <p class="type">Приложение</p>
-                </div>
-              </article>
+              <img
+                src="images/img13.jpg"
+                alt="Growing Business"
+                width="370"
+                height="294"
+              />
+              <div class="app-content">
+                <h2 class="product">Growing Business</h2>
+                <p class="type">Приложение</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -217,31 +179,27 @@
     </main>
     <footer class="footer">
       <div class="container footer-container">
-        <div class="logo-thumb">
-          <a class="logo-fotter" href="portfolio.html">
-            <span class="color-logo-fotter">Web</span>Studio</a
-          >
-        </div>
-        <address>
-          <div class="address-footer">
-            <ul>
-              <li>
-                <a class="contact-list" href="#"
-                  ><span class="map">г. Киев, пр-т Леси Украинки, 26</span></a
-                >
-              </li>
-              <li>
-                <a class="contact-list" href="mailto:info@devstudio.com "
-                  >info@devstudio.com</a
-                >
-              </li>
-              <li>
-                <a class="contact-list" href="tel:+380961111111"
-                  >+38 096 111 11 11</a
-                >
-              </li>
-            </ul>
-          </div>
+        <a class="logo-fotter" href="portfolio.html">
+          <span class="color-logo-fotter">Web</span>Studio</a
+        >
+        <address class="address-footer">
+          <ul>
+            <li>
+              <a class="contact-list" href="#"
+                ><span class="map">г. Киев, пр-т Леси Украинки, 26</span></a
+              >
+            </li>
+            <li>
+              <a class="contact-list" href="mailto:info@devstudio.com "
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="contact-list" href="tel:+380961111111"
+                >+38 096 111 11 11</a
+              >
+            </li>
+          </ul>
         </address>
       </div>
     </footer>
