--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
       <section class="section choice-section">
         <div class="container header-container">
           <h1 class="header">
-            Эффективные решения <br />
-            для вашего бизнеса
+            Эффективные решения для вашего бизнеса
           </h1>
           <button class="btn" type="button">Заказать услугу</button>
         </div>
@@ -138,68 +137,52 @@
           <h2 class="team">Наша команда</h2>
           <ul class="title-team">
             <li class="img-team">
-              <article class="card">
-                <div class="card-thumb">
                   <img
                     src="images/img1.jpg"
                     alt="Игорь Демьяненко Product Designer"
                     width="270"
                     height="260"
                   />
-                </div>
                 <div class="card-content">
                   <h3 class="person">Игорь Демьяненко</h3>
                   <p class="speciality">Product Designer</p>
                 </div>
-              </article>
             </li>
             <li class="img-team">
-              <article class="card">
-                <div class="card-thumb">
                   <img
                     src="images/img2.jpg"
                     alt="Ольга Репина Frontend Developer"
                     width="270"
                     height="260"
                   />
-                </div>
                 <div class="card-content">
                   <h3 class="person">Ольга Репина</h3>
                   <p class="speciality">Frontend Developer</p>
                 </div>
-              </article>
             </li>
             <li class="img-team">
-              <article class="card">
-                <div class="card-thumb">
                   <img
                     src="images/img3.jpg"
                     alt="Николай Тарасов Marketing"
                     width="270"
                     height="260"
                   />
-                </div>
                 <div class="card-content">
                   <h3 class="person">Николай Тарасов</h3>
                   <p class="speciality">Marketing</p>
                 </div>
-              </article>
             </li>
             <li class="img-team">
-              <article class="card">
-                <div class="card-thumb">
                   <img
                     src="images/img4.jpg"
                     alt="Михаил Ермаков UI Designer"
                     width="270"
                     height="260"
                   />
-                </div>
                 <div class="card-content">
                   <h3 class="person">Михаил Ермаков</h3>
                   <p class="speciality">UI Designer</p>
                 </div>
-              </article>
             </li>
           </ul>
         </div>
@@ -207,31 +190,26 @@
     </main>
     <footer class="footer">
       <div class="container footer-container">
-        <div class="logo-thumb">
-          <a class="logo-fotter" href="index.html">
+        <a class="logo-fotter" href="index.html" >
             <span class="color-logo-fotter">Web</span>Studio</a
           >
-        </div>
-        <address>
-          <div class="address-footer">
+        <address class="address-footer">
             <ul>
-              <li>
+              <li class="address-list">
                 <a class="contact-list" href="#"
                   ><span class="map">г. Киев, пр-т Леси Украинки, 26</span></a
                 >
               </li>
-              <li>
+              <li class="address-list">
                 <a class="contact-list" href="mailto:info@devstudio.com "
                   >info@devstudio.com</a
                 >
               </li>
-              <li>
+              <li class="address-list">
                 <a class="contact-list" href="tel:+380961111111"
-                  >+38 096 111 11 11</a
-                >
+                  >+38 096 111 11 11</a>
               </li>
             </ul>
-          </div>
         </address>
       </div>
     </footer>
